[package]
name = "error-rules"
version = "0.2.1"
authors = ["Andrey Dyldin <and@cesbo.com>"]
description = "Error handling without pain"
documentation = "https://docs.rs/error-rules"
repository = "https://github.com/cesbo/error-rules"
edition = "2018"
keywords = ["error"]
license = "MIT"

[dependencies]
error-derive = { path = "./error-derive", version = "0.2" }

[workspace]
members = [".", "error-derive"]
