[package]
name = "error-rules"
version = "1.0.0"
authors = ["Andrey Dyldin <and@cesbo.com>"]
description = "Error handling without pain"
documentation = "https://docs.rs/error-rules"
repository = "https://github.com/cesbo/error-rules"
edition = "2018"
keywords = ["error"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
